code chi tiết dịch vụ

--- a/WebsiteDental/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Template Stylesheet -->
     <link href="~/assets/css/style/style.css" rel="stylesheet">
+    <link href="~/assets/css/style/styleFooter.css" rel="stylesheet">
     <link href="~/assets/css/style/style_menu.css" rel="stylesheet">
     <link href="~/assets/css/style/style_Image.css" rel="stylesheet">
     <link href="~/assets/css/style/style_Discounts.css" rel="stylesheet">
@@ -37,7 +38,8 @@
     <link href="~/assets/css/style/Banner.css" rel="stylesheet">
     <link href="~/assets/css/style/style_FQA.css" rel="stylesheet">
     <link href="~/assets/css/style/style_Service.css" rel="stylesheet">
-   <link href="~/assets/css/style/style_Blogposts.css" rel="stylesheet"> 
+   <link href="~/assets/css/style/style_Blogposts.css" rel="stylesheet">
+
 
 
 </head>
@@ -74,128 +76,100 @@
    
 
     @RenderBody()
-   
 
-    <!-- Footer Start -->
-    <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-xl-9">
-                    <div class="mb-5">
-                        <div class="row g-4">
-                            <div class="col-md-6 col-lg-6 col-xl-5">
-                                <div class="footer-item">
-                                    <a href="index.html" class="p-0">
-                                        <h3 class="text-white"><i class="fab fa-slack me-3"></i> LTN-WebsiteDental</h3>
-                                        <!-- <img src="img/logo.png" alt="Logo"> -->
-                                    </a>
-                                    <p class="text-white mb-4" >Đem lại sự tự tin với nụ cười rạng rỡ! Chúng tôi cung cấp dịch vụ nha khoa chất lượng cao với đội ngũ bác sĩ giàu kinh nghiệm.</p>
-                                    <div class="footer-btn d-flex">
-                                        <a class="btn btn-md-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-md-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-md-square rounded-circle me-3" href="#"><i class="fab fa-instagram"></i></a>
-                                        <a class="btn btn-md-square rounded-circle me-0" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-6 col-xl-3">
-                                <div class="footer-item">
-                                    <h4 class="text-white mb-4">Liên kết nhanh</h4>
-                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Giới thiệu</a>
-                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Dịch vụ</a>
-                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Đội ngũ bác sĩ</a>
-                                    <a href="#"><i class="fas fa-angle-right me-2"></i> FAQ's</a>
-                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Tin tức </a>
-                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Liên hệ</a>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-6 col-xl-4">
-                                <div class="footer-item">
-                                    <h4 class="mb-4 text-white">Instagram</h4>
-                                    <div class="row g-3">
-                                        <div class="col-4">
-                                            <div class="footer-instagram rounded">
-                                                <img src="~/assets/img/instagram-footer-1.jpg" class="img-fluid w-100" alt="">
-                                                <div class="footer-search-icon">
-                                                    <a href="img/instagram-footer-1.jpg" data-lightbox="footerInstagram-1" class="my-auto"><i class="fas fa-link text-white"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-4">
-                                            <div class="footer-instagram rounded">
-                                                <img src="~/assets/img/instagram-footer-2.jpg" class="img-fluid w-100" alt="">
-                                                <div class="footer-search-icon">
-                                                    <a href="img/instagram-footer-2.jpg" data-lightbox="footerInstagram-2" class="my-auto"><i class="fas fa-link text-white"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-4">
-                                            <div class="footer-instagram rounded">
-                                                <img src="~/assets/img/instagram-footer-3.jpg" class="img-fluid w-100" alt="">
-                                                <div class="footer-search-icon">
-                                                    <a href="img/instagram-footer-3.jpg" data-lightbox="footerInstagram-3" class="my-auto"><i class="fas fa-link text-white"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-4">
-                                            <div class="footer-instagram rounded">
-                                                <img src="~/assets/img/instagram-footer-4.jpg" class="img-fluid w-100" alt="">
-                                                <div class="footer-search-icon">
-                                                    <a href="img/instagram-footer-4.jpg" data-lightbox="footerInstagram-4" class="my-auto"><i class="fas fa-link text-white"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-4">
-                                            <div class="footer-instagram rounded">
-                                                <img src="~/assets/img/instagram-footer-5.jpg" class="img-fluid w-100" alt="">
-                                                <div class="footer-search-icon">
-                                                    <a href="img/instagram-footer-5.jpg" data-lightbox="footerInstagram-5" class="my-auto"><i class="fas fa-link text-white"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-4">
-                                            <div class="footer-instagram rounded">
-                                                <img src="~/assets/img/instagram-footer-6.jpg" class="img-fluid w-100" alt="">
-                                                <div class="footer-search-icon">
-                                                    <a href="img/instagram-footer-6.jpg" data-lightbox="footerInstagram-6" class="my-auto"><i class="fas fa-link text-white"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+
+    <!-- Footer Section Start -->
+    <div class="dental-footer">
+        <div class="dental-footer-top">
+            <div class="dental-container">
+                <div class="dental-footer-main">
+                    <!-- Thông tin công ty -->
+                    <div class="dental-footer-col">
+                        <h3 class="dental-footer-title">LTN-WebsiteDental - SIÊU THỊ NHA KHOA</h3>
+                        <div class="dental-footer-info">
+                            <p><i class="fas fa-map-marker-alt"></i> VP tại Việt Nam: Tòa Nhà Trường Thịnh, 76 Nguyễn Hảo Vĩnh, P. Tân Quý, Q. Tân Phú, TP. HCM</p>
+                            <p><i class="fas fa-map-marker-alt"></i> VP tại Nhật Bản: Kanagawa Ken Ebina - Shi Nakana, Japan</p>
+                            <p><i class="fas fa-phone-alt"></i> Hotline CSKH: <a href="tel:0975800600">0975 800 600</a></p>
+                            <p><i class="fas fa-headset"></i> Hotline khiếu nại: <a href="tel:02871088889">(028) 7108 8889</a></p>
+                            <p><i class="fas fa-store"></i> Cửa hàng: 360 Phan Đăng Lưu, phường 5, Phú Nhuận, Hồ Chí Minh</p>
+                            <p><i class="fas fa-phone"></i> Điện thoại: <a href="tel:02871001779">(028) 7100 1779</a></p>
+                            <p><i class="fas fa-id-card"></i> Giấy CNĐKKD: 0313518985 - Sở KH & ĐT TP. HCM - Phòng ĐKKD (Cấp ngày: 03/11/2015)</p>
+                        </div>
+                        <div class="dental-footer-social">
+                            <span>Kết nối với chúng tôi: </span>
+                            <a href="#" class="dental-social-btn"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#" class="dental-social-btn"><i class="fab fa-shopify"></i></a>
+                            <a href="#" class="dental-social-btn"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+
+                    <!-- Hỗ trợ khách hàng -->
+                    <div class="dental-footer-col">
+                        <h3 class="dental-footer-title">Hỗ trợ khách hàng</h3>
+                        <ul class="dental-footer-links">
+                            <li><a href="#">Câu hỏi thường gặp</a></li>
+                            <li><a href="#">Chính sách vận chuyển</a></li>
+                            <li><a href="#">Quy định bán hàng trên Website</a></li>
+                            <li><a href="#">Hướng dẫn mua hàng</a></li>
+                            <li><a href="#">Chính sách đổi trả và hoàn tiền</a></li>
+                            <li><a href="#">Thời gian giao hàng</a></li>
+                            <li><a href="#">Phương thức thanh toán</a></li>
+                            <li><a href="#">Về chúng tôi</a></li>
+                            <li><a href="#">Điều khoản giao dịch</a></li>
+                            <li><a href="#">Quyền lợi thành viên</a></li>
+                            <li><a href="#">Chính sách bảo mật</a></li>
+                            <li><a href="#">Chính sách bảo hành</a></li>
+                            <li><a href="#"><i class="fas fa-star"></i> Cẩm nang tiêu dùng</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Tiện ích -->
+                    <div class="dental-footer-col">
+                        <h3 class="dental-footer-title">Tiện ích</h3>
+                        <div class="dental-app-download">
+                            <p>TẢI APP</p>
+                            <div class="dental-qr-app">
+                                <img src="https://i.pinimg.com/736x/2b/91/0f/2b910f55638ba5a16de81337edf0ec25.jpg" alt="QR Code Tải App">
+                                <div class="dental-app-links">
+                                    <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvzJASvP_DUtrXr3e-pFLajZYQ8NUOP-g46g&s" alt="App Store"></a>
+                                    <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Google_Play_Store_badge_EN.svg/1280px-Google_Play_Store_badge_EN.svg.png" alt="Google Play"></a>
                                 </div>
                             </div>
                         </div>
-                    </div>               
-                </div>
 
-                <div class="col-xl-3">
-                    <div class="footer-item">
-                        <h4 class="text-white mb-4">Chăm sóc nụ cười của bạn</h4>
-                        <p class="text-white mb-3">Đem lại sự tự tin với nụ cười rạng rỡ! </p>
-                        <div class="position-relative rounded-pill mb-4">
-                            <input class="form-control rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
-                            <button type="button" class="btn btn-primary rounded-pill position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
-                        </div>
-                        <div class="d-flex flex-shrink-0">
-                            <div class="footer-btn">
-                                <a href="#" class="btn btn-lg-square rounded-circle position-relative wow tada" data-wow-delay=".9s">
-                                    <i class="fa fa-phone-alt fa-2x"></i>
-                                    <div class="position-absolute" style="top: 2px; right: 12px;">
-                                        <span><i class="fa fa-comment-dots text-secondary"></i></span>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="d-flex flex-column ms-3 flex-shrink-0">
-                                <span>Hãy gọi cho chúng tôi!</span>
-                                <a href="tel:+ 0123 456 7890"><span class="text-white">+) 0835731781</span></a>
+                        <div class="dental-payment">
+                            <h3 class="dental-footer-title">THANH TOÁN</h3>
+                            <div class="dental-payment-methods">
+                                <div class="dental-payment-row">
+                                    <img src="https://facovietnam.com/wp-content/uploads/2022/08/thanh-toan-bang-tien-mat-tren-20-trieu-co-duoc-chap-nhan-khong.jpg" alt="Tiền mặt">
+                                    <img src="https://canhme.com/wp-content/uploads/2016/01/visa_mastercard.jpg" alt="Visa">
+                                    <img src="https://news.appotapay.com/wp-content/uploads/2022/04/huong-dan-tich-hop-thanh-toan-visa-master-vao-website-don-gian-1.jpg" alt="Mastercard">
+                                </div>
+                                <div class="dental-payment-row">
+                                    <img src="https://secomm.vn/wp-content/uploads/2021/11/Phuong-thuc-thanh-toan-thuong-mai-dien-tu.png" alt="Internet Banking">
+                                    <img src="https://cdn.tgdd.vn/2023/12/campaign/Thumb2-VNpay-800x450-640x360.jpg" alt="VNPay">
+                                    <img src="https://cdn-media.sforum.vn/storage/app/media/vi-momo.jpg" alt="Momo">
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="dental-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.2586009840104!2d106.6785533!3d10.792884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTDCsDQ3JzU0LjQiTiAxMDbCsDQwJzQyLjgiRQ!5e0!3m2!1svi!2s!4v1650000000000!5m2!1svi!2s" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+
+        <div class="dental-copyright">
+            <div class="dental-container">
+                <p>&copy; 2025 LTN-WebsiteDental. Tất cả quyền được bảo lưu.</p>
+            </div>
+        </div>
     </div>
-    <!-- Footer End -->
+    <!-- Footer Section End -->
+
+
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary btn-lg-square rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
 
