--- a/WebsiteDental/wwwroot/assets/css/style/style.css
+++ b/WebsiteDental/wwwroot/assets/css/style/style.css
@@ -897,4 +897,5 @@
 p {
     color: #0a4776 !important;
 }
-/*///////////////////////CSS BANNER ĐÂY///////////////////////////////*/
+/*///////////////////////CSS phần Footer ĐÂY///////////////////////////////*/
+
