--- a/WebsiteDental/Areas/Admin/Views/Products/Create.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Products/Create.cshtml
@@ -358,7 +358,26 @@
     </div>
 </div>
 
-
+    <!-- Summernote JS -->
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.20/dist/summernote-lite.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#summernoteEditor').summernote({
+                placeholder: 'Nhập nội dung...',
+                tabsize: 2,
+                height: 300,
+                toolbar: [
+                    ['style', ['style']],
+                    ['font', ['bold', 'underline', 'clear']],
+                    ['color', ['color']],
+                    ['para', ['ul', 'ol', 'paragraph']],
+                    ['table', ['table']],
+                    ['insert', ['link', 'picture', 'video']],
+                    ['view', ['fullscreen', 'codeview', 'help']]
+                ]
+            });
+        });
+    </script>
     <script>
         document.getElementById("imageUpload").addEventListener("change", function (event) {
             let file = event.target.files[0];
